Attempt fix website on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,6 @@ body,
   height: 100%;
   width: 100%;
   margin: 0;
-  overflow: hidden;
 }
 
 html {
